Added icons to different headers.

--- a/src/Club/LogBundle/Resources/views/Dashboard/log_table.html.twig
+++ b/src/Club/LogBundle/Resources/views/Dashboard/log_table.html.twig
@@ -1,4 +1,4 @@
-<h2>{% trans %}Recent logs{% endtrans %}</h2>
+<h2><img src="{{ asset('bundles/clublayout/images/icons/32x32/server_error.png') }}" /> {% trans %}Recent logs{% endtrans %}</h2>
 
 <table class="table">
   <thead>
