--- a/src/Club/UserBundle/Resources/views/Dashboard/user_table.html.twig
+++ b/src/Club/UserBundle/Resources/views/Dashboard/user_table.html.twig
@@ -1,4 +1,4 @@
-<h2>{% trans %}New users{% endtrans %}</h2>
+<h2><img src="{{ asset('bundles/clublayout/images/icons/32x32/user_add.png') }}" /> {% trans %}New users{% endtrans %}</h2>
 
 <table class="table">
   <thead>
