Rewrite leaguecontroller to rankingcontroller.

--- a/src/Club/MatchBundle/Resources/views/Ranking/index.html.twig
+++ b/src/Club/MatchBundle/Resources/views/Ranking/index.html.twig
@@ -14,8 +14,8 @@
 {% render "ClubMatchBundle:Match:Recent" with {'limit':20} %}
 
 {% for league in leagues %}
-  <h3><a href="{{ path('club_match_league_show', {'id':league.id}) }}">{{ league.name }}</a></h3>
-  {% render "ClubMatchBundle:League:Top" with {'id':league.id, 'limit':league_view_top} %}
+  <h3><a href="{{ path('club_match_ranking_show', {'id':league.id}) }}">{{ league.name }}</a></h3>
+  {% render "ClubMatchBundle:Ranking:Top" with {'id':league.id, 'limit':league_view_top} %}
 
 {% else %}
   <p class="msg info">{% trans %}There are no leagues.{% endtrans %}</p>
