--- a/src/Club/MatchBundle/Resources/views/Match/show.html.twig
+++ b/src/Club/MatchBundle/Resources/views/Match/show.html.twig
@@ -31,7 +31,7 @@
     </tr>
   </tfoot>
   <tbody>
-    {% include "ClubMatchBundle:League:match.html.twig" with {'nocomment':true} %}
+    {% include "ClubMatchBundle:Ranking:match.html.twig" with {'nocomment':true} %}
   </tbody>
 </table>
 
