--- a/src/Club/MatchBundle/Resources/views/Ranking/RecentMatches.html.twig
+++ b/src/Club/MatchBundle/Resources/views/Ranking/RecentMatches.html.twig
@@ -16,7 +16,7 @@
   </tfoot>
   <tbody>
     {% for match in matches %}
-      {% include "ClubMatchBundle:League:match.html.twig" %}
+      {% include "ClubMatchBundle:Ranking:match.html.twig" %}
     {% else %}
     <tr>
       <td colspan="5">{% trans %}No matches has been played.{% endtrans %}</td>
