--- a/src/Club/MatchBundle/Resources/views/Ranking/show.html.twig
+++ b/src/Club/MatchBundle/Resources/views/Ranking/show.html.twig
@@ -2,9 +2,9 @@
 
 {% block body %}
 
-{% include "ClubMatchBundle:League:match_button.html.twig" %}
+{% include "ClubMatchBundle:Ranking:match_button.html.twig" %}
 
-<h3><a href="{{ path('club_match_league_show', {'id':league.id}) }}">{{ league.name }}</a></h3>
+<h3><a href="{{ path('club_match_ranking_show', {'id':league.id}) }}">{{ league.name }}</a></h3>
 
 <h4>{% trans %}Ranking info{% endtrans %}</h4>
 <table class="table">
@@ -40,7 +40,7 @@
   </tbody>
 </table>
 
-{% render "ClubMatchBundle:League:Top" with {'id':league.id, 'limit':50} %}
-{% render "ClubMatchBundle:League:RecentMatches" with {'id':league.id, 'limit':50} %}
+{% render "ClubMatchBundle:Ranking:Top" with {'id':league.id, 'limit':50} %}
+{% render "ClubMatchBundle:Ranking:RecentMatches" with {'id':league.id, 'limit':50} %}
 
 {% endblock %}
