Renamed adminleague to adminranking.

--- a/src/Club/MatchBundle/Resources/views/AdminRanking/index.html.twig
+++ b/src/Club/MatchBundle/Resources/views/AdminRanking/index.html.twig
@@ -4,7 +4,7 @@
 <div class="navbar">
     <div class="navbar-inner">
         <ul class="nav">
-            <li><a href="{{ path('club_match_adminleague_new') }}">{% trans %}Create league{% endtrans %}</a></li>
+            <li><a href="{{ path('club_match_adminranking_new') }}">{% trans %}Create ranking{% endtrans %}</a></li>
         </ul>
     </div>
 </div>
@@ -14,7 +14,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th>{% trans %}League{% endtrans %}</th>
+      <th>{% trans %}Ranking{% endtrans %}</th>
       <th>{% trans %}Invite only{% endtrans %}</th>
       <th>{% trans %}Created at{% endtrans %}</th>
       <th class="action">{% trans %}Action{% endtrans %}</th>
@@ -32,14 +32,14 @@
       <td>{% if league.inviteOnly %}Invite only{% else %}{% trans %}Open for all{% endtrans %}{% endif %}</td>
       <td>{{ league.createdAt|club_datetime }}</td>
       <td>
-        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_match_adminleague_edit', { 'id':league.id })} %}
-        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_match_adminleague_delete', { 'id':league.id })} %}
-        {% include "ClubLayoutBundle:Default:players_link.html.twig" with {'url':path('club_match_adminleague_users', { 'id':league.id })} %}
+        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_match_adminranking_edit', { 'id':league.id })} %}
+        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_match_adminranking_delete', { 'id':league.id })} %}
+        {% include "ClubLayoutBundle:Default:players_link.html.twig" with {'url':path('club_match_adminranking_users', { 'id':league.id })} %}
       </td>
     </tr>
   {% else %}
   <tr>
-    <td colspan="5">{% trans %}There are no leagues.{% endtrans %}</td>
+    <td colspan="5">{% trans %}There are no rankings.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
