--- a/src/Club/MenuBundle/Resources/views/Default/topMenu.html.twig
+++ b/src/Club/MenuBundle/Resources/views/Default/topMenu.html.twig
@@ -19,16 +19,24 @@
 
              <ul class="nav">
                 {% for item in menu %}
-                    {% if item.items is defined %}
+
+                    {% if item.header is defined and item.items is defined %}
+                        {% if item.items|length == 1 %}
+                            {% for i in item.items %}
+                            <li><a href="{{ i.route }}">{{ i.name }}</a></li>
+                            {% endfor %}
+                        {% else %}
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ item.name }} <b class="caret"></b></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ item.header }} <b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="{{ item.route }}">{{ item.name }}</a></li>
+
                                 {% for i in item.items %}
                                     <li><a href="{{ i.route }}">{{ i.name }}</a></li>
                                 {% endfor %}
+
                             </ul>
                         </li>
+                        {% endif %}
                     {% else %}
                         <li><a href="{{ item.route }}">{{ item.name }}</a></li>
                     {% endif %}
