Fixed default ranking view.

--- a/src/Club/RankingBundle/Resources/views/Ranking/index.html.twig
+++ b/src/Club/RankingBundle/Resources/views/Ranking/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "ClubMatchBundle::base.html.twig" %}
+{% extends "ClubRankingBundle::base.html.twig" %}
 
 {% block pagenav %}
 <div class="navbar">
@@ -13,12 +13,12 @@
 {% block body %}
 {% render "ClubMatchBundle:Match:Recent" with {'limit':20} %}
 
-{% for league in leagues %}
-  <h3><a href="{{ path('club_match_ranking_show', {'id':league.id}) }}">{{ league.name }}</a></h3>
-  {% render "ClubMatchBundle:Ranking:Top" with {'id':league.id, 'limit':league_view_top} %}
+{% for ranking in rankings %}
+  <h3><a href="{{ path('club_ranking_ranking_show', {'id':ranking.id}) }}">{{ ranking.name }}</a></h3>
+  {% render "ClubRankingBundle:Ranking:Top" with {'id':ranking.id, 'limit':ranking_view_top} %}
 
 {% else %}
-  <p class="msg info">{% trans %}There are no leagues.{% endtrans %}</p>
+  <p class="msg info">{% trans %}There are no rankings.{% endtrans %}</p>
 {% endfor %}
 
 {% endblock %}
