Rename match same player to same player.

--- a/src/Club/RankingBundle/Resources/views/Ranking/show.html.twig
+++ b/src/Club/RankingBundle/Resources/views/Ranking/show.html.twig
@@ -35,7 +35,7 @@
     </tr>
     <tr>
       <th>{% trans %}Matches with same opponent{% endtrans %}</th>
-      <td>{{ league.rule.matchSamePlayer }}</td>
+      <td>{{ league.rule.samePlayer }}</td>
     </tr>
   </tbody>
 </table>
