--- a/src/Club/RankingBundle/Resources/views/AdminRule/index.html.twig
+++ b/src/Club/RankingBundle/Resources/views/AdminRule/index.html.twig
@@ -4,7 +4,7 @@
 <div class="navbar">
     <div class="navbar-inner">
         <ul class="nav">
-            <li><a href="{{ path('club_match_adminrule_new') }}">{% trans %}Create rule{% endtrans %}</a></li>
+            <li><a href="{{ path('club_ranking_adminrule_new') }}">{% trans %}Create rule{% endtrans %}</a></li>
         </ul>
     </div>
 </div>
@@ -33,11 +33,11 @@
       <td>{{ rule.name }}</td>
       <td>{{ rule.pointWon }}</td>
       <td>{{ rule.pointLost }}</td>
-      <td>{{ rule.matchSamePlayer }}</td>
+      <td>{{ rule.samePlayer }}</td>
       <td>{{ rule.createdAt|club_datetime }}</td>
       <td>
-        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_match_adminrule_edit', { 'id':rule.id })} %}
-        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_match_adminrule_delete', { 'id':rule.id })} %}
+        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_ranking_adminrule_edit', { 'id':rule.id })} %}
+        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_ranking_adminrule_delete', { 'id':rule.id })} %}
       </td>
     </tr>
   {% else %}
