Fixed headers on ranking bundle.

--- a/src/Club/RankingBundle/Resources/views/AdminRanking/new.html.twig
+++ b/src/Club/RankingBundle/Resources/views/AdminRanking/new.html.twig
@@ -1,4 +1,4 @@
-{% extends "ClubMatchBundle::base.html.twig" %}
+{% extends "ClubRankingBundle::base.html.twig" %}
 
 {% block body %}
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_match_adminranking_new')} %}
