--- a/src/Club/RankingBundle/Resources/views/AdminRule/index.html.twig
+++ b/src/Club/RankingBundle/Resources/views/AdminRule/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "ClubMatchBundle::base.html.twig" %}
+{% extends "ClubRankingBundle::base.html.twig" %}
 
 {% block pagenav %}
 <div class="navbar">
@@ -17,7 +17,7 @@
       <th>{% trans %}Name{% endtrans %}</th>
       <th>{% trans %}Point won{% endtrans %}</th>
       <th>{% trans %}Point lost{% endtrans %}</th>
-      <th>{% trans %}Match same player{% endtrans %}</th>
+      <th>{% trans %}Same player{% endtrans %}</th>
       <th>{% trans %}Created at{% endtrans %}</th>
       <th class="action">{% trans %}Action{% endtrans %}</th>
     </tr>
