--- a/src/Club/RankingBundle/Resources/views/Ranking/show.html.twig
+++ b/src/Club/RankingBundle/Resources/views/Ranking/show.html.twig
@@ -2,20 +2,20 @@
 
 {% block body %}
 
-{% include "ClubMatchBundle:Ranking:match_button.html.twig" %}
+{% include "ClubRankingBundle:Ranking:match_button.html.twig" %}
 
-<h3><a href="{{ path('club_match_ranking_show', {'id':league.id}) }}">{{ league.name }}</a></h3>
+<h3><a href="{{ path('club_match_ranking_show', {'id':ranking.id}) }}">{{ ranking.name }}</a></h3>
 
 <h4>{% trans %}Ranking info{% endtrans %}</h4>
 <table class="table">
   <tbody>
     <tr>
       <th>{% trans %}Period{% endtrans %}</th>
-      <td>{{ league.startDate|club_date }} - {{ league.endDate|club_date }}</td>
+      <td>{{ ranking.startDate|club_date }} - {{ ranking.endDate|club_date }}</td>
     </tr>
     <tr>
       <th>{% trans %}Ranking type{% endtrans %}</th>
-      {% if league.inviteOnly %}
+      {% if ranking.inviteOnly %}
       <td>{% trans %}Invite only{% endtrans %}</td>
       {% else %}
       <td>{% trans %}Open for all{% endtrans %}</td>
@@ -23,24 +23,24 @@
     </tr>
     <tr>
       <th>{% trans %}Sets per match{% endtrans %}</th>
-      <td>{{ league.gameSet }}</td>
+      <td>{{ ranking.gameSet }}</td>
     </tr>
     <tr>
       <th>{% trans %}Point for victory{% endtrans %}</th>
-      <td>{{ league.rule.pointWon }}</td>
+      <td>{{ ranking.rule.pointWon }}</td>
     </tr>
     <tr>
       <th>{% trans %}Point for defeat{% endtrans %}</th>
-      <td>{{ league.rule.pointLost }}</td>
+      <td>{{ ranking.rule.pointLost }}</td>
     </tr>
     <tr>
       <th>{% trans %}Matches with same opponent{% endtrans %}</th>
-      <td>{{ league.rule.samePlayer }}</td>
+      <td>{{ ranking.rule.samePlayer }}</td>
     </tr>
   </tbody>
 </table>
 
-{% render "ClubMatchBundle:Ranking:Top" with {'id':league.id, 'limit':50} %}
-{% render "ClubMatchBundle:Ranking:RecentMatches" with {'id':league.id, 'limit':50} %}
+{% render "ClubMatchBundle:Ranking:Top" with {'id':ranking.id, 'limit':50} %}
+{% render "ClubMatchBundle:Ranking:RecentMatches" with {'id':ranking.id, 'limit':50} %}
 
 {% endblock %}
