--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -38,13 +38,13 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ asset('bundles/clublayout/images/apple-touch-icon-72-precomposed.png') }}">
     <link rel="apple-touch-icon-precomposed" href="{{ asset('bundles/clublayout/images/apple-touch-icon-57-precomposed.png') }}">
 
-
     {% block stylesheets %}{% endblock %}
     {% block javascripts %}{% endblock %}
 
 </head>
 <body>
 
+    {% block after_body %}{% endblock %}
     {% block topmenu %}
     {% render "ClubMenuBundle:Default:topMenu" %}
     {% endblock %}
