--- a/src/Club/ShopBundle/Resources/views/AdminOrder/orders_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/AdminOrder/orders_table.html.twig
@@ -26,8 +26,11 @@
       <td>{{ order.updatedAt|club_datetime }}</td>
       <td>
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('admin_shop_order_edit', { 'id':order.id })} %}
+        {% if not order.paid %}
         {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('admin_shop_order_delete', { 'id':order.id })} %}
+        {% if not order.paid %}
         {% include "ClubLayoutBundle:Default:payment_link.html.twig" with {'url':path('club_payment_cash_cash_register', { 'order_id':order.id })} %}
+        {% endif %}
       </td>
     </tr>
   {% else %}
