--- a/src/Club/EventBundle/Resources/views/AdminAttend/index.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminAttend/index.html.twig
@@ -1,8 +1,18 @@
 {% extends "ClubEventBundle::base.html.twig" %}
 
-{% block body %}
-<h2>{% trans %}Attends{% endtrans %}</h2>
+{% block header %}<div class="page-header"><h1>Attends, {{ event.eventName }}</h1></div>{% endblock %}
 
+{% block pagenav %}
+<div class="navbar">
+    <div class="navbar-inner">
+        <ul class="nav">
+            <li><a href="">{% trans %}Print{% endtrans %}</a></li>
+        </ul>
+    </div>
+</div>
+{% endblock %}
+
+{% block body %}
 <table class="table">
   <thead>
     <tr>
