Added event log to user.

--- a/src/Club/UserBundle/Resources/views/AdminUser/log.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/log.html.twig
@@ -3,48 +3,6 @@
 {% block body %}
 
 {% include "ClubUserBundle:AdminUser:header.html.twig" %}
-
-<table class="style">
-  <thead>
-    <tr>
-      <th>{% trans %}Read{% endtrans %}</th>
-      <th>{% trans %}Severity{% endtrans %}</th>
-      <th>{% trans %}Message{% endtrans %}</th>
-      <th>{% trans %}Created at{% endtrans %}</th>
-      <th>{% trans %}Action{% endtrans %}</th>
-    </tr>
-  </thead>
-  <tfoot>
-    <tr class="bg">
-      <td colspan="5">&#160;</td>
-    </tr>
-  </tfoot>
-  <tbody>
-  {% for log in logs %}
-    <tr>
-      <td>
-        {% if not log.new %}<img src="{{ asset('bundles/clublayout/images/icons/16x16/email_open.png') }}" title="{% trans %}Read{% endtrans %}" alt="{% trans %}Read{% endtrans %}" />
-        {% else %}<img src="{{ asset('bundles/clublayout/images/icons/16x16/email.png') }}" title="{% trans %}Unread{% endtrans %}" alt="{% trans %}Unread{% endtrans %}" />
-        {% endif %}
-      </td>
-      <td>
-        {% if log.severity == 'debug' %}<span class="label label-02">{{ log.severity }}</span>
-        {% elseif log.severity == 'informational' %}<span class="label label-02">{{ log.severity }}</span>
-        {% elseif log.severity == 'warning' %}<span class="label label-04">{{ log.severity }}</span>
-        {% else %}<span class="label label-01">{{ log.severity }}</span>{% endif %}
-      </td>
-      <td>{{ log.log }}</td>
-      <td>{{ log.createdAt|club_datetime }}</td>
-      <td>
-        {% include "ClubLayoutBundle:Default:show_link.html.twig" with {'url':path('club_log_log_show', { 'id':log.id })} %}
-      </td>
-    </tr>
-  {% else %}
-  <tr>
-    <td colspan="5">{% trans %}There are no logs.{% endtrans %}</td>
-  </tr>
-  {% endfor %}
-  </tbody>
-</table>
+{% include "ClubLogBundle:Log:log_table.html.twig" %}
 
 {% endblock %}
