--- a/src/Club/UserBundle/Resources/views/AdminUser/header.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/header.html.twig
@@ -8,6 +8,7 @@
             <li><a href="{{ path('admin_user_group', { 'id':user.id }) }}">{% trans %}Group{% endtrans %}</a></li>
             <li><a href="{{ path('admin_user_note', { 'id':user.id }) }}">{% trans %}Notes{% endtrans %}</a></li>
             <li><a href="{{ path('club_user_adminuser_shop', { 'id':user.id }) }}">{% trans %}Shop as{% endtrans %}</a></li>
+            <li><a href="{{ path('club_user_adminuser_log', { 'id':user.id }) }}">{% trans %}Log{% endtrans %}</a></li>
         </ul>
     </div>
 </div>
