--- a/src/Club/EventBundle/Resources/views/AdminAttend/index.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminAttend/index.html.twig
@@ -1,18 +1,10 @@
 {% extends "ClubEventBundle::base.html.twig" %}
 
-{% block header %}<div class="page-header"><h1>{% trans with {'%name%':event.eventName} %}Attends, %name%{% endtrans %}</h1></div>{% endblock %}
-
-{% block pagenav %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
-            <li><a target="_open" href="{{ path('club_event_adminattend_print', {'id':event.id}) }}">{% trans %}Print{% endtrans %}</a></li>
-        </ul>
-    </div>
-</div>
-{% endblock %}
+{% block header %}<div class="page-header"><h1>{% trans with {'%name%':event.eventName} %}%name%, Attends{% endtrans %}</h1></div>{% endblock %}
 
 {% block body %}
+{% include "ClubEventBundle:AdminEvent:header.html.twig" %}
+
 <table class="table">
   <thead>
     <tr>
