--- a/src/Club/EventBundle/Resources/views/AdminEvent/edit.html.twig
+++ b/src/Club/EventBundle/Resources/views/AdminEvent/edit.html.twig
@@ -1,5 +1,10 @@
 {% extends "ClubEventBundle::base.html.twig" %}
 
+{% block header %}<div class="page-header"><h1>{{ event.eventName }}</h1></div>{% endblock %}
+
 {% block body %}
+
+{% include "ClubEventBundle:AdminEvent:header.html.twig" %}
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('admin_event_event_edit', {'id':event.id}), 'novalidate':true} %}
+
 {% endblock %}
