--- a/src/Club/LogBundle/Resources/views/PhpLog/index.html.twig
+++ b/src/Club/LogBundle/Resources/views/PhpLog/index.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubLogBundle::base.html.twig" %}
 
+{% block header %}
+<div class="page-header"><h1>{% trans %}PHP Log{% endtrans %}</h1></div>
+{% endblock %}
+
 {% block body %}
 
 {% include "ClubLogBundle:Log:header.html.twig" %}
