--- a/src/Club/MailBundle/Resources/views/MailLog/index.html.twig
+++ b/src/Club/MailBundle/Resources/views/MailLog/index.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubMailBundle::base.html.twig" %}
 
+{% block header %}
+<div class="page-header"><h1>{% trans %}Mail Log{% endtrans %}</h1></div>
+{% endblock %}
+
 {% block body %}
 
 {% include "ClubLogBundle:Log:header.html.twig" %}
