--- a/src/Club/MailBundle/Resources/views/MailLog/show.html.twig
+++ b/src/Club/MailBundle/Resources/views/MailLog/show.html.twig
@@ -3,18 +3,19 @@
 {% block body %}
 {% include "ClubLogBundle:Log:header.html.twig" %}
 
-<h2>Mail</h2>
-
-<div class="box-03 log box">
-
-  <h2 class="nomb">{{ log.recipient }}</h2>
-  <p class="nomt low">
-    {% trans with {'%date%':log.createdAt|club_datetime} %}Created at: %date%{% endtrans %}
-  </p>
-
-  <h2>{% trans %}Message{% endtrans %}</h2>
-  <p class="nomt low">{{ log.message|nl2br }}</p>
-
-</div> <!-- /box-03 -->
+<table class="table table-bordered">
+    <tr>
+        <th>{% trans %}Recipient{% endtrans %}</th>
+        <td>{{ log.recipient }}</td>
+    </tr>
+    <tr>
+        <th>{% trans %}Sent at{% endtrans %}</th>
+        <td>{{ log.createdAt|club_datetime }}</td>
+    </tr>
+    <tr>
+        <th>{% trans %}Message{% endtrans %}</th>
+        <td>{{ log.message|nl2br }}</td>
+    </tr>
+</table>
 
 {% endblock %}
