--- a/src/Club/UserBundle/Resources/views/LoginLog/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/LoginLog/index.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
+{% block header %}
+<div class="page-header"><h1>{% trans %}Login Log{% endtrans %}</h1></div>
+{% endblock %}
+
 {% block body %}
 
 {% include "ClubLogBundle:Log:header.html.twig" %}
